--- a/requirements.txt
+++ b/requirements.txt
@@ -14,6 +14,7 @@ online-judge-tools==11.5.1
 referencing==0.35.1
 requests==2.32.3
 rpds-py==0.22.3
+setuptools==75.8.0
 soupsieve==2.6
 toml==0.10.2
 urllib3==2.3.0
